# mcp-multidb-python

./: .gitignore  README.md  connections.json.example  pyproject.toml  requirements.txt  run.bat  run.sh
lib/: README.txt
src/mcp_multidb/: config.py  jdbc_bridge.py  main.py
项目文档/MCP与工具配置/: 其他项目如何引用本MCP.md  推送到GitHub步骤.md  连接测试说明.md
项目文档/MCP与工具配置/skill-for-callers/: README.md
项目文档/MCP与工具配置/skill-for-callers/multidb-sql-analysis/: SKILL.md
项目文档/项目分析/: mcp-multidb-python 项目分析.md
